# kannushi

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: test.yml  validate.yml
src/kannushi/: __init__.py  __main__.py  _cli.py  _diff.py  _logging.py  _rendering.py  _verification.py  exceptions.py  extensions.py  render_templates.py  timing.py
src/kannushi/_cli/: __init__.py  junit.py  main.py
src/kannushi/_rendering/: __init__.py  core.py  ipc.py
src/kannushi/_vars/: __init__.py  loading.py  post_processing.py  pre_processing.py
