[project]
name = "kannushi"
version = "0.1.1"
description = "A batch renderer for Jinja templates"
readme = "README.md"
authors = [
    { name = "Taras Denysenko", email = "terrapass93@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.0.0,<4.0.0",
    "jinja2-error~=0.1.0",
    "pyyaml>=6.0.0,<7.0.0",
]

[project.urls]
Repository = "https://github.com/terrapass/kannushi"
Changelog = "https://github.com/terrapass/kannushi/blob/master/CHANGELOG.md"

[project.scripts]
kannushi = "kannushi._cli:main"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
